--- a/package.json
+++ b/package.json
@@ -44,8 +44,14 @@
     "tape": "~4.0.0"
   },
   "dependencies": {
-    "argosy-client": "~1.0.2",
-    "argosy-pattern": "~1.0.1",
-    "argosy-service": "~2.0.0"
+    "argosy-pattern": "~1.0.2",
+    "concurrent-queue": "~3.0.0",
+    "object-assign": "~3.0.0",
+    "promise-polyfill": "~2.0.2",
+    "split2": "~0.2.1",
+    "stream-combiner2": "~1.0.2",
+    "through2": "~2.0.0",
+    "through2-objectify": "~0.1.1",
+    "uuid": "~2.0.1"
   }
 }
