--- a/package.json
+++ b/package.json
@@ -34,18 +34,22 @@
   },
   "contributors": [],
   "devDependencies": {
-    "co": "~4.5.4",
-    "istanbul": "~0.3.14",
-    "jshint": "~2.8.0",
+    "@jasonpincin/standard": "~5.0.0-6",
+    "istanbul": "~0.3.17",
     "opn": "~1.0.1",
-    "request-promise": "~0.4.2",
     "tap-dot": "~1.0.0",
-    "tap-spec": "~4.0.0",
-    "tape": "~4.0.0"
+    "tap-spec": "~4.0.2",
+    "tape": "~4.0.0",
+    "request-promise": "~0.4.2",
+    "co": "~4.5.4"
   },
   "dependencies": {
-    "argosy-pattern": "~1.0.2",
+    "afterward": "~1.0.0",
+    "argosy-pattern": "~2.0.0",
+    "array-find": "~1.0.0",
     "concurrent-queue": "~3.0.0",
+    "eventuate": "~2.0.0",
+    "eventuate-filter": "~1.0.0",
     "object-assign": "~3.0.0",
     "promise-polyfill": "~2.0.2",
     "split2": "~0.2.1",
