--- a/package.json
+++ b/package.json
@@ -35,24 +35,25 @@
   "contributors": [],
   "devDependencies": {
     "@jasonpincin/standard": "~5.0.0-6",
+    "co": "~4.6.0",
     "istanbul": "~0.3.17",
     "opn": "~1.0.1",
+    "request-promise": "~0.4.2",
     "tap-dot": "~1.0.0",
     "tap-spec": "~4.0.2",
-    "tape": "~4.0.0",
-    "request-promise": "~0.4.2",
-    "co": "~4.5.4"
+    "tape": "~4.0.2"
   },
   "dependencies": {
     "afterward": "~1.0.0",
     "argosy-pattern": "~2.0.0",
     "array-find": "~1.0.0",
-    "concurrent-queue": "~3.0.0",
-    "eventuate": "~2.0.0",
-    "eventuate-filter": "~1.0.0",
+    "concurrent-queue": "~4.0.0",
+    "eventuate": "~3.0.0",
+    "eventuate-filter": "~2.0.0",
+    "eventuate-once": "~1.0.1",
     "object-assign": "~3.0.0",
-    "promise-polyfill": "~2.0.2",
-    "split2": "~0.2.1",
+    "promise-polyfill": "~2.1.0",
+    "split2": "~1.0.0",
     "stream-combiner2": "~1.0.2",
     "through2": "~2.0.0",
     "through2-objectify": "~0.1.1",
